--- a/Assignment2/views/upload-data.ejs
+++ b/Assignment2/views/upload-data.ejs
@@ -61,7 +61,7 @@
 <body>
     <form action="/upload-data" method="post" enctype="multipart/form-data">
         <label for="fileInput">Select a file:</label>
-        <input type="file" id="fileInput" name="fileInput" accept=".txt,.jpg" required>
+        <input type="file" id="fileInput" name="fileInput" accept=".txt,.jpg,.JPG" required>
         <button type="submit">Upload</button>
     </form>
 </body>
